tests/Rules/Aria/Fixtures/invalid/role_multiple_invalid.html.twig
{# 2 errors #}
<div role="foo">Bad</div>
<span role="bar">Also bad</span>
